--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "bootstrap": "^5.3.0",
+    "firebase": "^10.3.0",
     "framer-motion": "^10.12.22",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
